--- a/1.css
+++ b/1.css
@@ -223,7 +223,6 @@ nav a:hover {
   padding: 0.5rem;
   border-radius: 15px;
   border: 1px solid white;
-  /* background-color: #0d1717; */
   background: rgb(14,51,109);
   background: linear-gradient(90deg, rgb(159, 185, 57) 20%, rgb(68, 157, 165) 60%, rgb(127, 152, 190) 92%);
   color: black;
@@ -287,12 +286,12 @@ footer:hover {
 @media (max-width: 768px) {
   .tab,
   .login {
-    width: 100%;
+    width: 400px;
   }
   .tab table tr,
   .tab table td {
     font-size: 14px;
-    width: auto;
+    width: 400px;
   }
   .tab h2{
     font-size: 18px;
@@ -326,19 +325,5 @@ footer:hover {
   }
   .Academics h1 {
     font-size: 20px;
-  }
-}
-@media (max-width: 430px){
-  .tab,
-  .login{
-    width: 100%;
-  }
-  .tab table tr,
-  .tab table td {
-    font-size: 10px;
-    width: auto;
-  }
-  .tabh2{
-    font-size: 12px;
   }
 }
